# stellar-etl

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  backfill.md  docker-compose.yaml  exported_ledgers.txt  go.mod  go.sum  main.go
.claude/: CLAUDE.md  settings.json
.github/: CODEOWNERS  dependabot.yml  internal.yml  pull_request_template.md  release-drafter.yml  test.yml
captive-core-4eebea50/: stellar-core.conf
changes_output/: 50463534-50463535-accounts.txt  50463534-50463535-claimable_balances.txt  50463534-50463535-contract_data.txt  50463534-50463535-liquidity_pools.txt  50463534-50463535-offers.txt  50463534-50463535-trustlines.txt  50463534-50463535-ttl.txt
cmd/: accounts.go  command_utils.go  export_account_signers.go  export_account_signers_test.go  export_accounts.go  export_accounts_test.go  export_all_history.go  export_assets.go  export_assets_test.go  export_claimable_balances.go  export_claimable_balances_test.go  export_config_setting.go  export_config_setting_test.go  export_contract_code.go  export_contract_code_test.go  export_contract_data.go  export_contract_data_test.go  export_contract_events.go  export_contract_events_test.go  export_diagnostic_events.go  export_diagnostic_events_test.go  export_effects.go  export_effects_test.go  export_expiration.go  export_expiration_test.go  export_external_data.go  export_external_data_test.go  export_ledger_entry_changes.go  export_ledger_entry_changes_test.go  (+40 more)
lib/xdr2json/: Cargo.toml
lib/xdr2json/src/: lib.rs
(+181 files in other folders)
