[workspace]
resolver = "2"
members = [
    "lib/ffi",
    "lib/xdr2json"
]

[workspace.package]
rust-version = "1.79.0"

[workspace.dependencies.soroban-env-host-prev]
package = "soroban-env-host"
version = "=21.2.1"

[workspace.dependencies.soroban-env-host-curr]
package = "soroban-env-host"
version = "=22.0.0"
#git = "https://github.com/stellar/rs-soroban-env"
#rev = "0497816694bef2b103494c8c61b7c8a06a72c7d3"

[workspace.dependencies.soroban-simulation-prev]
package = "soroban-simulation"
version = "=21.2.1"

[workspace.dependencies.soroban-simulation-curr]
package = "soroban-simulation"
version = "=22.0.0"
# git = "https://github.com/stellar/rs-soroban-env"
# rev = "0497816694bef2b103494c8c61b7c8a06a72c7d3"

[workspace.dependencies.stellar-xdr]
version = "=22.0.0"
features = [ "serde" ]

[workspace.dependencies]
base64 = "0.22.0"
sha2 = "0.10.7"
libc = "0.2.147"
anyhow = "1.0.75"
rand = { version = "0.8.5", features = [] }
serde_json = "1.0"

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
