[package]
name = "xdr2json"
version = "22.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = { path = "../ffi" }
libc = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

stellar-xdr = { workspace = true }
